--- a/nonononotifications/app/build.gradle
+++ b/nonononotifications/app/build.gradle
@@ -25,10 +25,13 @@ android {
 }
 
 dependencies {
+    def work_version = "2.3.4"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.work:work-runtime:$work_version"
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
