--- a/nonononotifications/app/src/main/AndroidManifest.xml
+++ b/nonononotifications/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <!-- Start Firebase -->
         <service
-            android:name=".java.MyFirebaseMessagingService"
+            android:name=".MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
