--- a/nonononotifications/app/build.gradle
+++ b/nonononotifications/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation "androidx.work:work-runtime:$work_version"
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
     implementation 'com.google.firebase:firebase-analytics-ktx:17.4.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.okhttp3:okhttp:4.6.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
