--- a/nonononotifications/app/src/main/AndroidManifest.xml
+++ b/nonononotifications/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="website.entire.nonononotifications">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
