--- a/nonononotifications/app/build.gradle
+++ b/nonononotifications/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.work:work-runtime:$work_version"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
     implementation 'com.google.firebase:firebase-analytics-ktx:17.4.1'
     implementation 'com.google.code.gson:gson:2.8.6'
