--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,29 @@ attrs==19.3.0
 beautifulsoup4==4.9.0
 certifi==2020.4.5.1
 chardet==3.0.4
+click==7.1.2
 fbchat==1.9.6
+Flask==1.1.2
+gcloud==0.17.0
+googleapis-common-protos==1.51.0
+httplib2==0.17.3
 idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jws==0.1.3
+MarkupSafe==1.1.1
+oauth2client==3.0.0
 paho-mqtt==1.5.0
+protobuf==3.12.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycryptodome==3.4.3
+Pyrebase==3.0.27
+python-jwt==2.0.1
 requests==2.23.0
+requests-toolbelt==0.7.0
+rsa==4.0
+six==1.14.0
 soupsieve==2.0
 urllib3==1.25.9
+Werkzeug==1.0.1
