--- a/nonononotifications/app/build.gradle
+++ b/nonononotifications/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:viewmodel:1.1.0"
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
     implementation 'com.google.firebase:firebase-analytics-ktx:17.4.1'
     implementation 'com.google.code.gson:gson:2.8.6'
